--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -24,7 +24,7 @@
 \begin{titlepage}
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
-\title{\Large \textbf{The Life-cycle Benefits \\ of an Influential Early Childhood Program}\thanks{This research was supported in part by the American Bar Foundation; the Pritzker Children's Initiative, the Buffett Early Childhood Fund; National Institutes of Health grants NICHD R37HD065072, NICHD R01HD54702, NIA R24AG048081, and P30AG024968; an anonymous funder; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education funded by the Hymen Milgrom Supporting Organization; and the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development, affiliated with the Becker Friedman Institute for Research in Economics, and funded by the Institute for New Economic Thinking. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. We also thank the researchers of the HighScope Educational Research Foundation's Perry Preschool Study, especially Lawrence Schweinhart and Cheryl Polk, for access to study data and source materials. Years of partnership and collaboration with these project teams have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, Dana Goldman, Sidharth Moktan, Azeem Shaikh, Jeffrey Smith, Matthew Tauzer, and Ed Vytlacil. We also benefited from helpful comments received at a Russell Sage Foundation seminar in September, 2016. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files except for those of the Future America Model, due to private interests. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. Data agreements do not allow us to post some of the data files that we use. Interested parties can contact any of the authors to be given a temporary license to access the data and replicate the results. The Web Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{The Life-cycle Benefits \\ of an Influential Early Childhood Program}\thanks{This research was supported in part by the American Bar Foundation; the Pritzker Children's Initiative, the Buffett Early Childhood Fund; National Institutes of Health grants NICHD R37HD065072, NICHD R01HD54702, NIA R24AG048081, and P30AG024968; an anonymous funder; a grant from the Robert Wood Johnson Foundation; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education funded by the Hymen Milgrom Supporting Organization; and the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development, affiliated with the Becker Friedman Institute for Research in Economics, and funded by the Institute for New Economic Thinking. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. We also thank the researchers of the HighScope Educational Research Foundation's Perry Preschool Study, especially Lawrence Schweinhart and Cheryl Polk, for access to study data and source materials. Years of partnership and collaboration with these project teams have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, Dana Goldman, Sidharth Moktan, Azeem Shaikh, Jeffrey Smith, Matthew Tauzer, and Ed Vytlacil. We also benefited from helpful comments received at a Russell Sage Foundation seminar in September, 2016. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files except for those of the Future America Model, due to private interests. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. Data agreements do not allow us to post some of the data files that we use. Interested parties can contact any of the authors to be given a temporary license to access the data and replicate the results. The Web Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -333,7 +333,7 @@ Note: Panel (a) percentage of outcomes displaying a positive treatment effect, c
 
 The major goal of this paper is to summarize the multiple benefits of ABC/CARE using benefit/cost and rate of return analyses. We rely on auxiliary data to predict the costs and benefits of the program over the life cycle after the measurement phase of the study ends.
 
-This section explains our strategy for constructing out-of-sample treatment effects.\footnote{Appendix~\ref{appendix:gmm} states this identification and estimation strategy in the Generalized Method of Moments framework.} Our approach starts from and extends the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show, in a setting similar to ours, that the effect of treatment on outcomes operates through its effects on inputs in a stable production function rather than through shifts in the production function. Table~\ref{table:sources} presents the outcomes for which we conduct these analyses and the data sources used. We initially focus on labor income to illustrate our approach, but a similar methodology is used to predict the other outcomes.\footnote{We do not monetize the loss of leisure that individuals suffer from working more. The reason for this is two-fold: (i) lack of information on the intensive-margin labor supply; and (ii) different labor supply models have different implications with respect to leisure-time allocation and our data is not well-suited to estimate a structural model. We note, however, that the benefit-cost ratio and internal rate of return remain significant after removing labor income entirely (see Table~\ref{table:cba}). This exercise corresponds to a one-to-one loss of leisure given the gain in labor income, i.e. for each additional dollar an individual makes, she loses the same dollar of (monetized) leisure.}
+This section explains our strategy for constructing out-of-sample treatment effects.\footnote{Appendix~\ref{appendix:gmm} gives details of our step-by-step procedure and state its identification and estimation strategy in the Generalized Method of Moments framework.} Our approach starts from and extends the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show, in a setting similar to ours, that the effect of treatment on outcomes operates through its effects on inputs in a stable production function rather than through shifts in the production function. Table~\ref{table:sources} presents the outcomes for which we conduct these analyses and the data sources used. We initially focus on labor income to illustrate our approach, but a similar methodology is used to predict the other outcomes.\footnote{We do not monetize the loss of leisure that individuals suffer from working more. The reason for this is two-fold: (i) lack of information on the intensive-margin labor supply; and (ii) different labor supply models have different implications with respect to leisure-time allocation and our data is not well-suited to estimate a structural model. We note, however, that the benefit-cost ratio and internal rate of return remain significant after removing labor income entirely (see Table~\ref{table:cba}). This exercise corresponds to a one-to-one loss of leisure given the gain in labor income, i.e. for each additional dollar an individual makes, she loses the same dollar of (monetized) leisure.}
 
 \begin{table}[!htbp]
 \begin{threeparttable}
