--- a/preamble.tex
+++ b/preamble.tex
@@ -86,6 +86,7 @@
 
 %Functions
 \DeclareMathOperator{\cov}{Cov}
+\DeclareMathOperator{\corr}{Corr}
 \DeclareMathOperator{\var}{Var}
 \DeclareMathOperator{\plim}{plim}
 \DeclareMathOperator*{\argmin}{arg\,min}
