--- a/output/auto_npvmat.tex
+++ b/output/auto_npvmat.tex
@@ -1,8 +1,9 @@
-% matrix: mat file: auto_npvmat.tex  22 Nov 2016 16:26:15
+% matrix: mat file: auto_npvmat.tex  26 Nov 2016 07:16:01
 \begin{table}[htbp]
-\begin{tabular}{lcccccc} \hline \hline
- & c1  & c1  & c1  & c1  & c1  & c1  \\  \hline 
-r1 &  2.99e+05 &     0.065 &  5.43e+05 &     0.060 &  3428.090 &     0.491 \\  
-r1 &  5973.181 &     0.058 &  7098.956 &     0.132 &  3751.787 &     0.159 \\  
+\begin{tabular}{lcc} \hline \hline
+ & c1  & c1  \\  \hline 
+r1 & 80362.586 & 22816.207 \\  
+r1 & 60335.161 & 34187.753 \\  
+r1 & 92672.033 & 26773.651 \\  
 \hline \hline \end{tabular}
 \end{table}
